# devonthink-python

./: .gitignore  LICENSE  README.md  conversion_prompts.md  pyproject.toml  requirements.txt
examples/chatgtp/: add_tags.py  expand_content.py  requirements.txt
examples/document_analysis/: word_cloud.py
pydt3/: __init__.py  application.py  devonthink.py  helper_bridging.py  jxa_helper.js  jxa_helper.scpt  jxa_helper_v2.js  objproxy.py  osascript.py  utils.py
pydt3/apps/devonthink/: __init__.py  database.py  devonthink.py  item.py  record.py  reminder.py  smartgroup.py  tab.py  taggroup.py  text.py  windows.py
pydt3/apps/mail/: account.py  mail.py  mailbox.py  message.py
pydt3/models/: database.py  item.py  record.py  reminder.py  smartgroup.py  text.py  windows.py
tests/: test_application.py  test_bridging.py  test_database.py  test_devonthink_application.py  test_record.py  utils.py
